--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Lanyon
+title:            CuongPX
 tagline:          'A Jekyll theme'
 description:      'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              http://lanyon.getpoole.com
 
 author:
-  name:           'Mark Otto'
+  name:           'Cuong PX'
   url:            https://twitter.com/mdo
 
 paginate:         5
