update description on top page

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Xuan Cuong Pham
-tagline:          'Lecturer at School of Information and Communication, Water Resources University, Ha Noi, Viet Nam'
+tagline:          'WRU, Ha Noi, Viet Nam'
 description:      'My Blog'
 url:              http://lanyon.getpoole.com
 
